==================

Enhancements:

 * Fuzzy file finder now recognizes directories "a/c/repocontr" (Tim Felgentreff)
 * Recent project fuzzy finder (Benedikt Müller)
 * Improved DocumentSearch, with UI refinements, added Replace All commands (Tom Murray)
 * Raise/lower region behaves better when you select multiple lines (Benedikt Müller)
 * Project search backed by Lucene (Dan Lucraft)

Bugfixes:
 * Fixed Unicode problems in DocumentSearch (Tom Murray)
 * You can now symlink bin/redcar (Konstantin Haase)

Version 0.10 (17 January 2011)
==============================

Enhancements:

 * Add "Close others" and "Close all" commands to the File menu (Clinton R Nixon)
 * Syntax checking for Java (Delisa Mason)
 * Git integration is now available when the current project is a subdirectory of a repository (Delisa Mason)
 * Ctrl+A/E (home and end) added for Linux (Tomasz Wegrzanowski)
 * Trim line deletes newline if rest of line is empty (Tomasz Wegrzanowski)
 * Fuzzy finders (e.g. find file) ignore spaces. (Tomasz Wegrzanowski)
 * Highlighting the current file in the project tree is now optional and is in the Project menu (Delisa Mason)
 * Document Search is now incremental (Delisa Mason)
 * REPL Enhancements, including commit on Return (Delisa Mason)
 * Mirah syntax checking (Michal Hantl)
 * Mirah REPL (Delisa Mason)
 * More keybindings for adjusting views, such as changing font size, notebook width, and focussed tree (Delisa Mason)
 * New look! (Max Hawkins)
 * 3+ notebooks allowed at once (Dotan J. Nahum)
 * Configurable test runner plugin (Chris Nelson)
 * Added menu mnemonics for Linux and Windows (Delisa Mason)
 * Much improved search and replace behaviour (Tom Murray)

Bugfixes:

 * TitleCase now works when the selected text has capital letters in it (Delisa Mason)
 * Go to Declaration is only available when a project is open (Delisa Mason)
 * Saving a file prompts before overwriting (Delisa Mason)