@@ -8,6 +8,7 @@ Enhancements:
  * Improved DocumentSearch, with UI refinements, added Replace All commands (Tom Murray)
  * Raise/lower region behaves better when you select multiple lines (Benedikt Müller)
  * Project search backed by Lucene (Dan Lucraft)
+ * Which files are hidden in a project is now configurable (Konstantin Haase)
 
 Bugfixes:
  * Fixed Unicode problems in DocumentSearch (Tom Murray)
